embed bokeh plot; style

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@ Alternative title
 {% block content %}
 <form id="input" method="post" action="/prices">
     <p>Ticker symbol: <input type="text" name="ticker" placeholder="GOOG"></p>
-    <p><input type="checkbox" name="features" id="close"     value="close" checked><label for="close">Closing price</label></p>
-    <p><input type="checkbox" name="features" id="adj_close" value="adj_close"><label for="adj_close">Adjusted closing price</label></p>
-    <p><input type="checkbox" name="features" id="open"      value="open"><label for="open">Opening price</label></p>
-    <p><input type="checkbox" name="features" id="adj_open"  value="adj_open"><label for="adj_open">Adjusted opening price</label></p>
-    <p><input type="submit" value="Submit"></p>
+    <div><input type="checkbox" name="features" id="close"     value="close" checked><label for="close">Closing price</label></div>
+    <div><input type="checkbox" name="features" id="adj_close" value="adj_close"><label for="adj_close">Adjusted closing price</label></div>
+    <div><input type="checkbox" name="features" id="open"      value="open"><label for="open">Opening price</label></div>
+    <div><input type="checkbox" name="features" id="adj_open"  value="adj_open"><label for="adj_open">Adjusted opening price</label></div>
+    <div><input type="submit" value="Submit"></div>
 </form>
 {% endblock %}
