--- a/templates/base.html
+++ b/templates/base.html
@@ -7,30 +7,31 @@
     <meta name="author" content="@gotoariel">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
-    <title>{% block title %}Stock Price demo app{% endblock %}</title>
+    <title>{% block title %}Ticker Lookup App{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-left">
-          <h2>Hello, World!</h2>
-          <ul>
-            <li><a href="/about">About</a></li>
-            <li><a target="_blank" href="https://www.heroku.com/">Heroku</a></li>
-            <li><a target="_blank" href="http://flask.pocoo.org/">Flask</a></li>
-            <li><a target="_blank" href="http://jinja.pocoo.org/docs/2.9/">Jinja2</a></li>
-            <li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
-          </ul>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <span class="navbar-brand">Ticker Lookup App</span>
         </div>
+        <ul class="nav navbar-nav">
+          <li class="nav-item"><a href="/">Home</a></li>
+          <li class="nav-item"><a target="_blank" href="https://github.com/tcunnington/flask-demo">GitHub</a></li>
+          <li class="nav-item"><a target="_blank" href="https://www.thedataincubator.com/12day.html">12-day</a></li>
+        </ul>
       </div>
+    </nav>
+    <div class="container ticker-app">
+      <section class="col-lg-12 text-left">
+          {% block content %}{% endblock %}
+      </section>
     </div>
 
-    <section class="content">
-        {% block content %}{% endblock %}
-    </section>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
